# dolua

./: build.gradle  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/embux/dolua/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/sotaku/dolua/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: common.h  copencv.cpp  copencv.h  luafunc.cpp  lualoader.cpp  lualoader.h  luareplace.h  luna_four_code.h  native-lib.cpp
app/src/main/cpp/lua-5.3.2/src/: luaconf.h
app/src/main/java/com/embux/dolua/: FloatingControlService.java  JLua.java  LuaReceiver.java  LuaService.java  MainActivity.java
app/src/main/java/com/sotaku/dolua/: FloatingControlService.java  JLua.java  LuaReceiver.java  LuaService.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml  content_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/embux/dolua/: ExampleUnitTest.java
app/src/test/java/com/sotaku/dolua/: ExampleUnitTest.java
chimpchat/: build.gradle
jython/: build.gradle
key/: fusigi-system.jks
monkeyrunner/: build.gradle
openCVLibrary24132/: build.gradle
openCVLibrary24132/src/main/: AndroidManifest.xml
openCVLibrary24132/src/main/java/org/opencv/android/: OpenCVLoader.java
